--- a/my-app/src/Components/Details.css
+++ b/my-app/src/Components/Details.css
@@ -11,14 +11,14 @@
     position: absolute;
 }
 
-.container
+.inner-container
 {
     width: 1394px;
-    height: 684px;
-    background: rgba(229, 229, 229, 0.19);
+    height: 684px;border-radius: 10px;
+    background: rgba(229, 229, 229, 0.50);
+}
+
+.container{
     justify-content: center;
     align-items: center;
-    top: 2000px;
-    position: relative;
-
 }
