--- a/my-app/src/Components/Details.css
+++ b/my-app/src/Components/Details.css
@@ -13,12 +13,18 @@
 
 .inner-container
 {
-    width: 1394px;
+    width: 1630px;
     height: 684px;border-radius: 10px;
     background: rgba(229, 229, 229, 0.50);
-}
-
-.container{
     justify-content: center;
     align-items: center;
+    text-align: center;
+}
+
+.container1{
+    justify-content: center;
+    align-items: center;
+    left: 150px;
+    top: 2000px;
+    position: absolute;
 }
