--- a/my-app/src/Components/Details.css
+++ b/my-app/src/Components/Details.css
@@ -59,3 +59,13 @@
     align-items: center;
     position: relative;
 }
+
+.but{
+    left: 30px;
+    position: absolute;
+}
+
+.CARD1
+{
+    height:480PX;
+}
